# mofchecker-next

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DIAGNOSTIC_INVENTORY.md
py/mofchecker_next/: __init__.py  batch.py  cli.py  core.py  diagnostics.py  io.py
py/mofchecker_next/checks/: __init__.py  _subgraph_rx.py  charge_oms.py  composition.py  geometry.py  graph.py
py/mofchecker_next/eqeq/: __init__.py  parameters.py
py/mofchecker_next/gui/: app.py
rust/: Cargo.toml
rust/src/: contacts.rs  eqeq.rs  graph.rs  lib.rs  oms.rs  pbc.rs  voronoi.rs
scripts/: _bench_node.sh  _benchmark_worker.py  _qmof_reference_worker.py  bench_speed.py  benchmark_speedup.py  benchmark_throughput.py  benchmark_vs_reference.py  compare_atomic_overlap_parity.py  compare_charge_oms_parity.py  compare_graph_parity.py  compare_high_charges_parity.py  debug_flip.py  gen_ref_worker.py  generated_parity.py  qmof_parity.py  run_reference_mofchecker.py  validate_subgraph_rx.py
tests/: test_atomic_overlap_parity.py  test_batch.py  test_charge_oms.py  test_composition.py  test_core.py  test_eqeq.py  test_graph.py  test_pbc.py  test_short_contacts.py
