[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mofchecker-next"
version = "0.1.0"
description = "Incremental Rust/Python geometry kernels for MOF checking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mofchecker-next contributors" }]
dependencies = ["numpy>=1.26", "structuregraph-helpers>=0.0.9", "element-coder>=0.0.8", "libconeangle>=0.1.2", "rustworkx>=0.14"]

[project.optional-dependencies]
test = ["pytest>=8", "maturin>=1.7,<2"]
parity = ["pymatgen>=2024.8"]

# NOTE: the core project is MIT, but the `mofchecker_next.eqeq` subpackage is a
# faithful translation of EQeq (GPLv2) and vendors its data tables, so it is
# GPL-licensed (see py/mofchecker_next/eqeq/LICENSE). Distributing the whole as a
# combined work means the combination is governed by the GPL.

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "py"
module-name = "mofchecker_next._rust"
features = ["pyo3/abi3-py310", "pyo3/extension-module"]
# Ship the EQeq ionization/charge-center tables (GPL) used by the eqeq subpackage.
include = [
    "py/mofchecker_next/eqeq/data/ionizationdata.dat",
    "py/mofchecker_next/eqeq/data/chargecenters.dat",
    "py/mofchecker_next/eqeq/LICENSE",
]
