[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mofchecker-next"
version = "0.1.2"
description = "Incremental Rust/Python geometry kernels for MOF checking"
readme = "README.md"
requires-python = ">=3.10"
# The distributed package bundles the GPLv2 `mofchecker_next.eqeq` subpackage
# (a faithful EQeq translation), so the combined work is GPLv2. The non-eqeq
# sources remain MIT (see LICENSE); for an MIT-only build, omit `eqeq` and the
# `has_high_charges` diagnostic.
license = { text = "GPL-2.0-only" }
authors = [{ name = "Hendrik Kraß" }]
dependencies = ["numpy>=1.26", "structuregraph-helpers>=0.0.9", "element-coder>=0.0.8", "libconeangle>=0.1.2", "rustworkx>=0.14"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Repository = "https://github.com/henk789/mofchecker-next"

[project.scripts]
mofchecker-next = "mofchecker_next.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "maturin>=1.7,<2"]
parity = ["pymatgen>=2024.8"]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "py"
module-name = "mofchecker_next._rust"
features = ["pyo3/abi3-py310", "pyo3/extension-module"]
# Ship the license files (declared as License-File in metadata -> must exist in
# the sdist) and the EQeq ionization/charge-center tables (GPL) used by eqeq.
include = [
    "LICENSE",
    "py/mofchecker_next/eqeq/data/ionizationdata.dat",
    "py/mofchecker_next/eqeq/data/chargecenters.dat",
    "py/mofchecker_next/eqeq/LICENSE",
]
